--- a/events.html
+++ b/events.html
@@ -61,6 +61,7 @@
         /* flex-direction: row; */
         /* flex-wrap: wrap; */
             flex-flow: wrap row;
+            /* border: 1px black solid; */
       }
 
       .event_box > .image_box {
@@ -156,6 +157,11 @@
       .anim {
         animation: slide 1s ease;
         animation-fill-mode: forwards;
+      }
+      .p2 .event_link,
+      .p3 .event_link,
+      .p4 .event_link {
+        border-top: 1px solid black;
       }
     </style>
     <script type="text/javascript">
