--- a/museum_choice.html
+++ b/museum_choice.html
@@ -22,6 +22,7 @@
     </style>
   </head>
   <body>
+    <div class="cursor"></div>
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" href="visiting.html">посещение</a>
