--- a/shop_items/shtani.html
+++ b/shop_items/shtani.html
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="items.css">
-    
+
     <style media="screen">
       main{
         margin-top:100px;
@@ -123,6 +123,8 @@
     </style>
   </head>
   <body>
+    <div class="cursor"></div>
+    
     <nav>
         <a id="s1" href="../index.html"></a>
         <a  id="s2" href="../visiting.html">посещение</a>
