--- a/afisha.html
+++ b/afisha.html
@@ -12,6 +12,8 @@
     </script>
   </head>
   <body>
+    <div class="cursor"></div>
+    
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" href="visiting.html">посещение</a>
