--- a/build_info.html
+++ b/build_info.html
@@ -145,6 +145,8 @@
     </script>
   </head>
   <body>
+    <div class="cursor"></div>
+    
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" href="visiting.html">посещение</a>
