--- a/events.html
+++ b/events.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="javascript/jQuere.3.5.1.js"></script>
+    <script src="javascript/javascript.js"></script>
     <style media="screen">
     main{
     }
@@ -182,6 +183,8 @@
     </script>
   </head>
   <body>
+    <div class="cursor"></div>
+    
     <nav>
         <a id="s1" href="index.html"></a>
         <a id="s2" href="visiting.html">посещение</a>
