--- a/index.html
+++ b/index.html
@@ -5,21 +5,10 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascript/javascript.js"></script>
 
     <style media="screen">
-    #cursor {
-      position: absolute;
-      height: 40px;
-      width: 40px;
-      border-radius: 50%/50%;
-      background-color: #2f0;
-      filter: blur(6px);
-      }
-      .active{
-        filter: none;
-        background-color: blue;
-        background-color: blue;
-      }
+
 .bg{
   width: 70%;
   height: 70%;
@@ -268,7 +257,6 @@ input[type="email"]:focus{
 }
 
 
-
     </style>
 
 
@@ -286,24 +274,34 @@ input[type="email"]:focus{
       // $(".prisoedin").click(function(){
       //   $(".member_popup").addClass("fade")
       // })
-
-
       ////
-      $(document).mousemove(function(e) {
-    $('#cursor').css({
-      left:e.pageX - 10,
-      top:e.pageY - 10
-    });
 
-    $(".box").mouseover(function(){
-      $("#cursor").addClass("active");
-      });
-      $(".box").mouseout(function(){
-      $("#cursor").removeClass("active");
-    });
-  });
-});
+      //курсор
+  //     $(document).mousemove(function(e) {
+  //     $('.cursor').css({
+  //     left:e.pageX - 10,
+  //     top:e.pageY - 10
+  //       });
+  //     });
+  //
+  //
+  //     $("a, input, .box").mouseover(function(){
+  //   $(".cursor").addClass("active");
+  //   });
+  //   $("a, input, .box").mouseout(function(){
+  //   $(".cursor").removeClass("active");
+  //   });
+  //
+  //   $("input").mouseover(function(){
+  // $(".cursor").addClass("inter");
+  // });
+  // $("input").mouseout(function(){
+  // $(".cursor").removeClass("inter");
+  // });
 
+
+
+// });
 
       /////////
       $(window).resize(function(){
@@ -315,7 +313,7 @@ input[type="email"]:focus{
       }
       })
 
-.resize();
+        .resize();
 
         $(".icon-close").click(function(){
           // $(".menu-items").addClass("fade")
@@ -334,11 +332,11 @@ input[type="email"]:focus{
         })
 
 
-
+});
     </script>
   </head>
   <body>
-
+    <div class="cursor"></div>
     <div class="member_popup">
       <div class="exit"></div>
       <div class="gif_box">
