--- a/shop_items/gloves.html
+++ b/shop_items/gloves.html
@@ -17,6 +17,8 @@
     </style>
   </head>
   <body>
+    <div class="cursor"></div>
+    
     <nav>
         <a id="s1" href="../index.html"></a>
         <a  id="s2" href="../visiting.html">посещение</a>
