--- a/visiting.html
+++ b/visiting.html
@@ -4,17 +4,81 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <style media="screen">
-
+.containment-wrapper{
+  width: 100vw;
+  height: 100vh;
+}
       .render_box{
-        width: 
+        width: 10vw;
+        height: 10vw;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
+      #i1{background-image: url("01.png");}
+      #i2{background-image: url("02.png");}
+      #i3{background-image: url("03.png");}
+      #i4{background-image: url("04.png");}
+      #i5{background-image: url("05.png");}
+      #i6{background-image: url("06.png");}
+      #i7{background-image: url("07.png");}
+      #i8{background-image: url("08.png");}
+      #i9{background-image: url("09.png");}
+      #i0{background-image: url("10.png");}
+
+      #i11{background-image: url("11.png");}
+      #i12{background-image: url("12.png");}
+      #i13{background-image: url("13.png");}
+      #i14{background-image: url("14.png");}
+      #i15{background-image: url("15.png");}
+      #i16{background-image: url("16.png");}
+      #i17{background-image: url("17.png");}
+      #i18{background-image: url("18.png");}
+      #i19{background-image: url("19.png");}
+      #i20{background-image: url("20.png");}
+
+      #i21{background-image: url("21.png");}
+      #i22{background-image: url("22.png");}
+      #i23{background-image: url("23.png");}
+      #i24{background-image: url("24.png");}
+      #i25{background-image: url("25.png");}
+      #i26{background-image: url("26.png");}
+      #i27{background-image: url("27.png");}
+      #i28{background-image: url("28.png");}
+      #i29{background-image: url("29.png");}
+      #i30{background-image: url("30.png");}
+
+      #i31{background-image: url("31.png");}
+      #i32{background-image: url("32.png");}
+      #i33{background-image: url("33.png");}
+      #i34{background-image: url("34.png");}
+      #i35{background-image: url("35.png");}
+      #i36{background-image: url("36.png");}
+      #i37{background-image: url("37.png");}
+      #i38{background-image: url("38.png");}
+      #i39{background-image: url("39.png");}
+      #i40{background-image: url("40.png");}
+
+      #i1{background-image: url("01.png");}
+      #i1{background-image: url("01.png");}
+      #i1{background-image: url("01.png");}
+      #i1{background-image: url("01.png");}
+
     </style>
     <script type="text/javascript">
-
+        $(document).ready(function(){
+          $( function() {
+            // $( "#draggable5" ).draggable({ grid: [ 20, 20 ] });
+            $( ".drag" ).draggable({  grid: [ 20, 20 ], containment: ".containment-wrapper", scroll: false });
+          } );
+        })
     </script>
   </head>
   <body>
+    <div class="cursor"></div>
+    
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" class="this_p" href="visiting.html">посещение</a>
@@ -25,15 +89,19 @@
     </nav>
 
     <main>
-<div class="">
+
+<div class="containment-wrapper">
+      <div class="">
+
+      </div>
+
+
+
+
+
+
 
 </div>
-
-
-
-
-
-
     </main>
     <footer>
 
