museum blur cursor drag=touch

--- a/event_items/pole_z.html
+++ b/event_items/pole_z.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="events_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../javascript/javascript.js"></script>
 
     <style media="screen">
     p{
@@ -191,7 +193,7 @@
     </script>
   </head>
   <body>
-    
+<div class="cursor"></div>
     <nav>
         <a id="s1" href="../index.html"></a>
         <a id="s2" href="../visiting.html">посещение</a>
@@ -220,7 +222,9 @@
                 <div class="date_box">9</div>
                 <div class="date_box">10</div>
         </div>
+
         <div class="buy_ticket">купить билет</div>
+                      </div>
         <div class="c_3">
           <p>27 мая — 4 июня  <br>парк Лужники</p>
           <p></p>
