--- a/shop.html
+++ b/shop.html
@@ -5,34 +5,10 @@
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/shop.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascript/javascript.js"></script>
     <style media="screen">
 
-    .cost{
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 49%);
-      color: black;
-      text-align: left;
-      padding-left: 1.2em;
-      padding-top: 1em;
-      line-height: 1.3em;
-      opacity: 0;
-      transition: .5s;
-
-    }
-    .product_card{
-      overflow: hidden;
-      cursor: pointer;
-    }
-    .product_card:hover  .cost{
-      opacity: 1;
-      transition: .2s;
-      cursor: url("https://raw.githubusercontent.com/Kovriki/impress_web/dc03f55b590552ce8b4e533f753be0febfd12843/images/cursor_p.svg"), pointer;
-
-    }
-    .product_card a {
-      text-decoration: none;
-    }
     </style>
     <script type="text/javascript">
 
@@ -40,7 +16,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    
+
     <nav>
         <a id="s1" href="index.html"></a>
         <a id="s2" href="visiting.html">посещение</a>
