--- a/shop_items/water.html
+++ b/shop_items/water.html
@@ -5,7 +5,8 @@
     <title></title>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="items.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../javascript/javascript.js"></script>
     <style media="screen">
       .item_image{
         background-image: url('../images/items_images/water.png');
@@ -19,7 +20,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    
+
     <nav>
         <a id="s1" href="../index.html"></a>
         <a  id="s2" href="../visiting.html">посещение</a>
