--- a/index.html
+++ b/index.html
@@ -126,18 +126,20 @@ input[type="email"]:focus{
   background-image: url("images/dop.png");
   position: absolute;
   display: block;
-  top:120vw;
+  top:20vw;
   left: 0;
   background-position: center;
   animation: move 4s line infinite;
   z-index: 25;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 @keyframes move {
   0%{
-    top: calc(0 + 70px)
+    top: calc(20vw + 70px);
   }
   100%{
-    right: calc(0 + 150px)
+    right: calc(0 + 150px);
     }
 
 }
