--- a/museum_info.html
+++ b/museum_info.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascript/javascript.js"></script>
     <style media="screen">
     main {
       display: flex;
@@ -14,7 +16,7 @@
         height: 100vh;
         display: flex;
         box-sizing: border-box;
-
+        z-index: 1;
       }
       .book{
         width: 100%;
@@ -49,7 +51,27 @@
       .book h5{
         color: white;
       }
-      .book:hover {
+      .blur{
+        /* display: none; */
+        width: 100%;
+        height: 100vh;
+        background: rgba(255, 255, 255, .2);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        z-index: 10;
+        position: absolute;
+        opacity: 0;
+        transition: all .2s ease;
+      }
+      .blur:hover{
+        opacity: 1;
+        transition: all .2s ease;
+
+      }
+      /* .box:hover  .blur {
+        display: block;
+      } */
+      /* .book:hover {
         filter: blur(.5rem);
         cursor: url("https://raw.githubusercontent.com/Kovriki/impress_web/dc03f55b590552ce8b4e533f753be0febfd12843/images/cursor_p.svg"), pointer;
         transition: .2s, all;
@@ -58,7 +80,7 @@
         filter: blur(.5rem);
         cursor: url("https://raw.githubusercontent.com/Kovriki/impress_web/dc03f55b590552ce8b4e533f753be0febfd12843/images/cursor_p.svg"), pointer;
         transition: .2s, all;
-      }
+      } */
       .book:hover > h5 {
         opacity: 1;
         /* filter: blur(0); */
@@ -71,7 +93,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    
+
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" href="visiting.html">посещение</a>
@@ -80,14 +102,19 @@
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
-    /префиксы backdrop-filter
+    <!-- /префиксы backdrop-filter -->
 
     <main>
-      <div class="box book">
-        <a  class="" href="https://www.calameo.com/read/00665320613bb4b4b2ceb"></a>
+      <div class="box ">
+        <div class="blur"></div>
+        <div class="book"></div>
+        <!-- <a  class="" href="https://www.calameo.com/read/00665320613bb4b4b2ceb"></a> -->
       </div>
       <div class="box">
-          <a class="build" href="build_info.html"></a>
+        <div class="blur"></div>
+        <div class="build"></div>
+
+          <!-- <a class="build" href="build_info.html"></a> -->
           <!-- <h5>здание</h5> -->
       </div>
 
