--- a/events.html
+++ b/events.html
@@ -184,7 +184,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    
+
     <nav>
         <a id="s1" href="index.html"></a>
         <a id="s2" href="visiting.html">посещение</a>
@@ -262,7 +262,8 @@
 
 
       <div class="event_link">зимняя афиша</div>
-      <iframe src="interactive_web_poster/index.html" width="100%" height="900px" align="center">
+      <iframe src="https://kovriki.github.io/interactive_web_poster/" width="100%" height="900px" align="center">
+      <!-- <iframe src="interactive_web_poster/index.html" width="100%" height="900px" align="center"> -->
       </iframe>
 
     </main>
